--- a/scss/layout/_types-repair.scss
+++ b/scss/layout/_types-repair.scss
@@ -6,6 +6,10 @@
     padding-top: 6%;
     background: #fff;
   }
+
+  @media screen and (max-width: 768px) {
+    padding-top: 17%;
+  }
 }
 
 .types-repair__title {
